--- a/index.html
+++ b/index.html
@@ -17,33 +17,39 @@
     <main class="principal">
         <section class="esquerda">
             <textarea cols="40" class="texto-entrada" placeholder="Digite seu texto"></textarea>
-                <div class="aviso">
-                    <img src="./image/exclamation.png" alt="icone exclamação">
-                    <p>Apenas letras minúsculas e sem acento.</p>
-                </div>              
+            <div class="aviso">
+                <img src="./image/exclamation.png" alt="icone exclamação">
+                <p>Apenas letras minúsculas e sem acento.</p>
+            </div>
             <div class="botoes">
                 <button class="btn-code" onclick="btnCriptografar()">Criptografar</button>
                 <button class="btn-decode" onclick="btnDescriptografar()">Descriptografar</button>
-            </div>		
+            </div>
         </section>
         <section class="direita">
             <div class="inicio">
                 <img src="./image/figura.png" alt="Pessoa olhando um diamente com uma lupa">
                 <h1>Nenhuma mensagem encontrada</h1>
-                <p>Digite um texto que você deseja criptografar ou descriptografar.</p>  
+                <p>Digite um texto que você deseja criptografar ou descriptografar.</p>
             </div>
             <div class="final">
-                <textarea  class="texto-saida" disabled>
+                <textarea class="texto-saida" disabled>
                 </textarea>
                 <p><br></p>
                 <button class="btn-copiar" onclick="btnCopiar()">Copiar</button>
             </div>
         </section>
-        
+
     </main>
     <script src="./js/script.js"></script>
     <footer>
-        <p class="autor">Produzido por: Nilson Noboru Fukuda</p>
+        <p class="autor">Produzido por: Nilson Noboru Fukuda - nilson_f@terra.com.br<br></p>
+        <a href="https://www.linkedin.com/in/nilson-fukuda/">
+            <img class="linkedin" src="./image/linkedin.png" alt="Visite o Linkedin">
+        </a>
+        <a href="https://github.com/nilson-fukuda">
+            <img class="github" src="./image/GitHub-Mark.png" alt="Visite o Github">
+        </a>
     </footer>
 </body>
 </html>
